# PPFMap

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
clouds/: model_chair.pcd  model_chair2.pcd  scene_chair.pcd
doc/: Doxyfile.in  doxygen.css  mainpage.dox
include/PPFMap/: CudaPPFMatch.h  DiscretizedPPF.h  Map.h  PPFEstimationKernel.h  PPFMap.h  PPFMatch.h  Pose.h  StdMap.h  cuda_map.h  murmur.h  ppf.h  ppf_cuda_calls.h  utils.h
include/PPFMap/impl/: CudaPPFMatch.hpp  PPFMap.hpp  PPFMatch.hpp  ppf.hpp
src/: Map.cpp  Map.cu  PPFMatch.cpp  demo.cpp  ppf.cpp  ppf_cuda_calls.cu
tests/: CMakeLists.txt  Map.cpp  ppf.cpp  utils.cpp
